--- a/templates/register.html
+++ b/templates/register.html
@@ -11,5 +11,11 @@
         <input type="password" name="password" required>
         <button type="submit" class="btn">Register</button>
     </form>
+    {% if error %}
+    <p style="color:red;">{{error}}</p>
+    {% endif %}
+     {% if success %}
+    <p style="color:green;">{{success}}</p>
+    {% endif %}
 </div>
 {% endblock %}
